# LibStranger

./: .gitignore  README.md  autogen.sh  configure.ac  makefile.am
src/: arithmetic.c  auto_core_ops.c  backward.c  graph.c  pre_suffix.c  replace.c  stranger.h  test.c  widening.c
src/.deps/: arithmetic.Plo  auto_core_ops.Plo  backward.Plo  function_models.Plo  graph.Plo  multi_signature_generator.Plo  multi_track.Plo  pre_suffix.Plo  replace.Plo  utility.Plo  widening.Plo
strangerlib.xcodeproj/: project.pbxproj
strangerlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
strangerlib.xcodeproj/project.xcworkspace/xcuserdata/muath.xcuserdatad/: UserInterfaceState.xcuserstate
strangerlib.xcodeproj/xcuserdata/muath.xcuserdatad/xcschemes/: strangerlib.xcscheme  xcschememanagement.plist
testprogram/: sample_analysis.c  test.c  test_stranger.c
